--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Name and Dates Section -->
     <div class="info-section">
       <h1>Gloria Lunda Dinsag</h1>
-      <p>Born:Dec. 31, 1946 – Died: Sept. 12, 2024</p>
+      <p>Born: Dec. 31, 1946 – Died: Sept. 12, 2024</p>
     </div>
   </main>
 
@@ -35,8 +35,8 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Arche Pepito. All rights reserved. | 
-      <a href="Archepepito.u@gmail.com">Contact Me</a>
+    <p>&copy; 2024. All rights reserved. |  
+      <a href="Archepepito.u@gmail.com">Contact Me</a> 
     </p>
   </footer>
 
