--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2024. All rights reserved. |  
-      <a href="Archepepito.u@gmail.com">Contact Me</a> 
+      <a href=archepepito.u@gmail.com">Contact Me</a> 
     </p>
   </footer>
 
