--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2024. All rights reserved. |  
-      <a href=archepepito.u@gmail.com">Contact Me</a> 
+    <p>&copy; 2024. Arche Pepito | All rights reserved. 
+   
     </p>
   </footer>
 
