--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Video Section -->
   <section id="video-section" class="video-container">
     <video controls autoplay muted>
-      <source src="vid.mp4" type="video/mp4">
+      <source src="Gloria Lunda Dinsag.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </section>
